# Chrobelias

./: .envrc  .gitattributes  .gitignore  .gitmodules  .ocamlformat  BENCHES.md  Chrobelias.opam  Makefile  README.md  bench-chrobelias-str-ln.sh  bench-chrobelias-str-reln-huge.sh  bench-chrobelias-str-reln-very-huge.sh  bench-chrobelias-str-reln.sh  dune-project  shell.nix  stringfuzz_result.txt
benchmarks/: .gitignore  dune  gen-benchmarks.py  gen.ml  promote_info.ml
benchmarks/Semenov/: ln-sat-pldi20.smt2  ln-unsat-sat24.smt2  lnr-sat-pldi20.smt2  lnr-sat-tcs23.smt2  lnr-unsat-intro.smt2  lnrc-sat-pldi20.smt2
benchmarks/tests/EXP-solver/flatten/head/: dune  test10.t  test100.t  test11.t  test12.t  test16.t  test19.t  test2.t  test22.t  test25.t  test26.t  test28.t  test29.t  test3.t  test30.t  test31.t  test34.t  test37.t  test4.t  test41.t  test46.t  test47.t  test48.t  test49.t  test5.t  test53.t  (+87 more)
benchmarks/tests/EXP-solver/flatten/head-tail/: dune  test1.t  test100.t  test15.t  test17.t  test18.t  test2.t  test20.t  test21.t  test24.t  test25.t  test27.t  test28.t  test29.t  test30.t  test31.t  test33.t  test35.t  test36.t  test38.t  test40.t  test41.t  test44.t  test45.t  test46.t  test47.t  test48.t  test50.t  test51.t  test52.t  test54.t  test55.t  test56.t  test57.t  test58.t  test6.t  test60.t  test61.t  test64.t  test65.t  (+65 more)
benchmarks/tests/QF_LIA/PURRS/: Makefile  dune  purrs01.t  purrs02.t  purrs03.t  purrs04.t  purrs05.t  purrs06.t  purrs07.t  purrs08.t  purrs09.t  purrs10.t  purrs11.t  purrs12.t  purrs13.t  purrs14.t  purrs15.t  purrs16.t  purrs17.t  purrs18.t  purrs19.t  purrs20.t  purrs21.t  purrs22.t  purrs23.t  purrs24.t  purrs25.t  purrs26.t  purrs27.t  purrs28.t  purrs29.t  purrs30.t  purrs31.t  purrs32.t  purrs33.t  purrs34.t  purrs35.t  purrs36.t  purrs37.t
benchmarks/tests/QF_SLIA/2018-Kepler/: Makefile  dune  quad-001-1-unsat.t  quad-002-1-unsat.t  quad-003-2-sat.t  quad-004-2-unsat.t  quad-005-2-sat.t  quad-006-2-unsat.t  quad-007-2-sat.t  quad-008-2-unsat.t  quad-009-2-sat.t  quad-010-2-unsat.t  quad-011-2-sat.t  quad-012-2-unsat.t  quad-013-2-2-sat.t  quad-014-2-2-unsat.t  quad-015-2-3-sat.t  quad-016-2-3-unsat.t  quad-017-2-4-sat.t  quad-018-2-4-unsat.t  quad-019-2-4-sat.t  quad-020-2-4-unsat.t  quad-021-3-sat.t  quad-022-3-unsat.t  quad-023-3-sat.t  quad-024-3-unsat.t  quad-025-2-2-sat.t  quad-026-2-2-unsat.t  quad-027-2-2-sat.t  quad-028-2-2-unsat.t  quad-029-3-1-sat.t  quad-030-3-1-unsat.t  quad-031-3-1-sat.t  quad-032-3-1-unsat.t  quad-033-3-2-sat.t  quad-034-3-2-unsat.t  quad-035-3-2-sat.t  quad-036-3-2-unsat.t  quad-037-3-2-sat.t  quad-038-3-2-unsat.t  (+549 more)
benchmarks/tests/QF_SLIA/20230329-denghang/: Makefile  dune  instance1309.t  instance15073.t  instance175.t  instance18816.t  instance20549.t  instance23794.t  instance24782.t  instance2904.t  instance30657.t  instance30869.t  instance309.t  instance31854.t  instance31959.t  instance37.t  instance40028.t  instance40916.t  instance41232.t  instance44052.t  instance44061.t  instance44067.t  instance44108.t  instance44110.t  instance44125.t  instance44126.t  instance44134.t  instance44155.t  instance44160.t  instance44173.t  instance44178.t  instance44179.t  instance44190.t  instance44240.t  instance44241.t  instance44257.t  instance44265.t  instance44300.t  instance44305.t  instance44318.t  (+961 more)
benchmarks/tests/QF_SLIA/20250410-matching/: Makefile  dune  sub-find-sat-1.t  sub-find-sat-2.t  sub-find-sat-3.t  sub-find-sat-4.t  sub-find-sat-5.t  sub-find-sat-6.t  sub-find-unsat-1.t  sub-find-unsat-10.t  sub-find-unsat-2.t  sub-find-unsat-3.t  sub-find-unsat-4.t  sub-find-unsat-5.t  sub-find-unsat-6.t  sub-find-unsat-7.t  sub-find-unsat-8.t  sub-find-unsat-9.t
lib/: Config.ml  Env.ml  Env.mli  FT_SIG.ml  NfaCollection.ml  NfaCollection.mli  Orderings.ml  Overapprox.ml  SimplI.ml  SimplII.ml  SimplII.mli  Simpl_alpha.ml  Simpl_alpha.mli  Under2.ml  Under2.mli  Underapprox.ml  ast.ml  config.ml  config.mli  debug.ml  debug.mli  dune  fe.ml  ir.ml  me.ml  nfa.ml  nfa.mli  regex.ml  solver.ml  solver.mli  utils.ml  utils.mli
tests/: bw.smt2  bw.t  dune  fcp_2_4.t  issue136.t  issue181.t  join_model.t  join_model1.t  lia.smt2  lia.t  order.t  qf-eia-model.smt2  qf-eia-model.t  qf-eia.smt2  qf-eia.t  qf-s.smt2  qf-s.t  unsupp.t
tests/arithmetization/: chrobak.smt2  chrobak.t  dune  issue171.t  only-len.smt2  only-len.t  split-unsat.smt2  split.smt2
tests/fe/: 692.smt2  692ite.t  dune
tests/manyexp/: 3exp.smt2  3exp.t  dune  issue188.smt2  issue188.t
tests/overapprox/: 1.t  NIA2334test1.smt2  NIA2334test33.smt2  NIA2334test5.smt2  NIA2334test5.t  dune  eqSum3exp.smt2  nia.t  sum3exp2.smt2
tests/regular/: dune  simple-nfa.smt2  simple-nfa.t  simple.smt2  simple.t
tests/simpl/: a.t  alpha.t  alpha2.t  dune  heapsort2.t  myst.t
tests/simpl2/: NIA2334test1.t  NIA2334test33.t  NIA2334test5.t  TODOs.t  a.t  a03koat15.t  after_PURRS.t  b.t  bad.t  c.t  contra.t  dune  exp-test27.t  flatten.t  heapsort.t  heapsort29.t  issue117.smt2  issue117.t  issue117strlen.t  issue121overflow.t  issue150.t  koat36mini.smt2  koat36mini.t  koat748.t  koat748_mini.smt2  koat748_mini.t  koat83mini.smt2  koat83mini.t  mod.t  realheapsort311.t  strings1.t  strings2.t  strings3.smt2  strings3.t  strings4.smt2  strings4.t  strings5.smt2  strings6.smt2  strings7.smt2  sum3exp.t  (+6 more)
tests/simpl2/twn14_koat_18/: 1.t  2.t  3.t  4.t  dune  input2.smt2  input3.smt2  input4.smt2
tests/simpl2/twn14_koat_27/: 1.t  dune
tests/strings/: baba1.smt2  baba1.t  baba2.smt2  baba2.t  baba3.smt2  baba3.t  baba4.smt2  baba4.t  dune  morestrings.t  range-escape.t  simple-len.smt2  simple-len.t  strings10001.t  strreln.t
tests/swine/: 1.t  dune
tests/underapprox/: 1.t  2.t  NIA2334test1.t  NIA2334test33.t  NIA2334test5.t  dune  smoke1.smt2  sum3exp.smt2  sum3exp.t
tests/underapprox2/: 1.t  bad.smt2  bad.t  dune  issue134uv.t  issue92.smt2  issue92mini.t  purrs02mini.smt2  purrs02mini.t
tests/underapprox3/: basic.smt2  basic.t  dune  subst-2.smt2  subst-3.smt2  subst-4.smt2  subst-5.smt2  subst.smt2  subst.t
tests/z3/: 1.t
(+20633 files in other folders)
