(executable
 (name gen)
 (modules gen)
 (libraries base unix str))

(cram
 (applies_to gen)
 (deps ./gen.exe))

(rule
 (targets
  (dir QF_SLIA))
 (deps %{project_root}/vendor/QF_SLIA.tar.zst)
 (mode
  (promote (until-clean)))
 (action
  (progn
   (run tar -xf %{project_root}/vendor/QF_SLIA.tar.zst)
   (run mv non-incremental/QF_SLIA .)
   (run rm -rf non-incremental))))

(executable
 (name promote_info)
 (modules promote_info)
 (libraries base unix str))
