(env
 (dev
  (flags
   (:standard -w -unused-var-strict))))

(library
 (name lib)
 (modules Ast Nfa NfaCollection Ir Regex Solver Debug Fe Me)
 (libraries base angstrom bitv smtml unix iter zarith)
 (inline_tests)
 (preprocess
  (pps
   ppx_deriving.show
   ppx_variants_conv
   ppx_inline_test
   ppx_assert
   ppx_expect
   ppx_regexp)))
