(env
 (dev
  (flags
   (:standard -w -unused-var-strict))))

(library
 (name lib)
 (modules
  Ast
  Env
  Config
  Nfa
  NfaCollection
  Ir
  Simpl_alpha
  Overapprox
  Orderings
  Underapprox
  Regex
  Solver
  Debug
  Fe
  FT_SIG
  SimplII
  Me
  Utils)
 (libraries base angstrom bitv smtml unix iter zarith)
 (inline_tests)
 (preprocess
  (pps
   ppx_deriving.show
   ppx_compare
   ppx_variants_conv
   ppx_inline_test
   ppx_assert
   ppx_expect
   ppx_regexp)))
