(cram
 (deps %{bin:Chro}))

(cram
 (applies_to a)
 (deps test1.smt2))

(cram
 (applies_to test2)
 (deps test2exp.smt2))

(cram
 (deps ../../benchmarks/heapsort.c.koat_2.smt2)
 (applies_to heapsort))

(cram
 (deps ../overapprox/NIA2334test1.smt2)
 (applies_to NIA2334test1))

(cram
 (deps ../overapprox/NIA2334test5.smt2)
 (applies_to NIA2334test5))

(cram
 (deps ../overapprox/NIA2334test33.smt2)
 (applies_to NIA2334test33))
