(cram
 (deps %{bin:Chro}))

(cram
 (applies_to a)
 (deps test1.smt2))

(cram
 (applies_to test2)
 (deps test2exp.smt2))

(cram
 (deps ../../benchmarks/heapsort.c.koat_2.smt2)
 (applies_to heapsort))

(cram
 (deps
  ../../benchmarks/QF_LIA/LoAT/TPDB_ITS_Complexity/heapsort.c.koat_29.smt2)
 (applies_to heapsort29))

(cram
 (deps ../../benchmarks/QF_LIA/LoAT/TPDB_ITS_Complexity/a.03.koat_748.smt2)
 (applies_to koat748))

(cram
 (deps koat748_mini.smt2)
 (applies_to koat748_mini))

(cram
 (deps test3rec.smt2 test4rec.smt2)
 (applies_to test_occurs))

(cram
 (deps ../overapprox/NIA2334test1.smt2)
 (applies_to NIA2334test1))

(cram
 (deps ../overapprox/NIA2334test5.smt2)
 (applies_to NIA2334test5))

(cram
 (deps ../overapprox/NIA2334test33.smt2)
 (applies_to NIA2334test33))
