(cram
 (deps %{bin:Chro}))

(cram
 (applies_to a)
 (deps test1.smt2))

(cram
 (applies_to test2)
 (deps test2exp.smt2))

(cram
 (applies_to bad)
 (deps ../../benchmarks/QF_LIA/LoAT/TPDB_ITS_Complexity/size02.koat_83.smt2))

(cram
 (applies_to issue150)
 (deps ../examples/issue150.smt2))

(cram
 (applies_to exp-test27)
 (deps ../examples/exp-test27.smt2))

(cram
 (applies_to koat36mini)
 (deps koat36mini.smt2))

(cram
 (applies_to koat83mini)
 (deps koat83mini.smt2))

(cram
 (deps ../../benchmarks/heapsort.c.koat_2.smt2)
 (applies_to heapsort))

(cram
 (deps ../../benchmarks/QF_LIA/LoAT/TPDB_ITS_Complexity/a.03.koat_15.smt2)
 (applies_to a03koat15))

(cram
 (deps
  ../../benchmarks/QF_LIA/LoAT/TPDB_ITS_Complexity/heapsort.c.koat_29.smt2)
 (applies_to heapsort29))

(cram
 (deps ../../benchmarks/QF_LIA/LoAT/TPDB_ITS_Complexity/a.03.koat_748.smt2)
 (applies_to koat748))

(cram
 (deps
  ../../benchmarks/QF_LIA/LoAT/TPDB_ITS_Complexity/realheapsort_step2.koat_311.smt2)
 (applies_to realheapsort311))

(cram
 (deps koat748_mini.smt2)
 (applies_to koat748_mini))

(cram
 (deps ../underapprox/sum3exp.smt2)
 (applies_to sum3exp))

(cram
 (deps test3rec.smt2 test4rec.smt2)
 (applies_to test_occurs))

(cram
 (deps ../overapprox/NIA2334test1.smt2)
 (applies_to NIA2334test1))

(cram
 (deps ../overapprox/NIA2334test5.smt2)
 (applies_to NIA2334test5))

(cram
 (deps ../overapprox/NIA2334test33.smt2)
 (applies_to NIA2334test33))

(cram
 (deps issue117.smt2)
 (applies_to issue117))
