(cram
 (applies_to baba1)
 (deps baba1.smt2))

(cram
 (applies_to baba2)
 (deps baba2.smt2))

(cram
 (applies_to baba3)
 (deps baba3.smt2))

(cram
 (applies_to baba4)
 (deps baba4.smt2))

(cram
 (applies_to simple-len)
 (deps simple-len.smt2))

(cram
 (applies_to only-len)
 (deps only-len.smt2))

(cram
 (applies_to strings10001)
 (deps ../examples/strings10001.smt2))

(cram
 (deps %{bin:Chro}))
